apps/coder/backend-traffic-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: coder
  namespace: coder
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: coder
  timeout:
    http:
      connectionIdleTimeout: 3600s
      requestTimeout: 3600s
